<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="Income"
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_monetization_on_black_24dp"/>
        <item
            android:title="Debts"
            android:id="@+id/nav_time_change"
            android:icon="@drawable/ic_credit_card_black_24dp"
            />
        <item
            android:title="Expenses"
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_receipt_black_24dp"/>

        <item
            android:id="@+id/nav_create_budget"
            android:title="@string/create_budget"
            android:icon="@drawable/ic_add_circle_black_24dp" />

        <item
            android:id="@+id/nav_account_balance"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="Account balance" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/sign_out" />
            <item
                android:title="@string/about_app"
                android:id="@+id/about_app"
                android:icon="@drawable/ic_info_black_24dp"
                />
        </menu>
    </item>

</menu>
