<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.eunice.accountant.SignUpFragment">


    <android.support.v7.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        tools:targetApi="lollipop"
        android:id="@+id/circle_view"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:background="@android:color/background_dark"
        android:thicknessRatio="1.9"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/profile_image_sign_up"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:id="@+id/profile_camera_button"
            android:background="@android:color/darker_gray"
            android:src="@drawable/ic_photo_camera_black_24dp"/>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:id="@+id/first_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginLeft="10dp"
        android:id="@+id/last_name"
        android:inputType="textPersonName"
        android:layout_marginRight="10dp" />
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_nickname"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:id="@+id/username_sign_up"
            android:layout_marginRight="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:layout_marginLeft="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_address_sign_up"
            android:layout_marginRight="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/password_sign_up"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:id="@+id/confirm_password_sign_up"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="10dp"
        android:text="@string/save_text"
        android:padding="10dp"
        android:textSize="18sp" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:padding="10dp"
        android:id="@+id/spinner_time_sign_up"
        android:layout_marginLeft="10dp"
        android:entries="@array/time_values">
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="220dp"
        android:layout_marginRight="60dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:id="@+id/button_sign_up"
        android:textStyle="italic"
        android:background="#4bc" />


</RelativeLayout>
